--- a/views/aditya.ejs
+++ b/views/aditya.ejs
@@ -31,7 +31,7 @@
     }
     
     #profile {
-        background-image: url(https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/82208327_2520501884831749_5037329629786931200_o.jpg?_nc_cat=108&_nc_sid=09cbfe&_nc_ohc=hcEvMUlO6PUAX-QSEx3&_nc_ht=scontent.fknu1-1.fna&oh=8b5cb613186c34f11266549439c21447&oe=5F824C3E);
+        background-image: url(https://scontent.flko4-1.fna.fbcdn.net/v/t1.0-9/82208327_2520501884831749_5037329629786931200_o.jpg?_nc_cat=108&ccb=2&_nc_sid=09cbfe&_nc_ohc=k8NGGAN6yuwAX9eQ1HE&_nc_ht=scontent.flko4-1.fna&oh=fbb5d751d3b2b795b6aae5ac2e21b567&oe=60480D3E);
         background-size: cover;
         border-radius: 50%;
         z-index: 1;
