--- a/views/akram.ejs
+++ b/views/akram.ejs
@@ -31,7 +31,7 @@
     }
     
     #profile {
-        background-image: url(https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/69405939_123622245646474_6832581339099693056_n.jpg?_nc_cat=107&_nc_sid=174925&_nc_ohc=1BVufFUNJGkAX8GA_ke&_nc_ht=scontent.fknu1-1.fna&oh=a790e6ff563834ad4d8c121226354c75&oe=5F8147EA);
+        background-image: url(https://scontent.flko4-1.fna.fbcdn.net/v/t1.0-9/123692455_373948943947135_4960322748329735603_n.jpg?_nc_cat=102&ccb=2&_nc_sid=09cbfe&_nc_ohc=Y2lzcqN3uqIAX9PnZKv&_nc_ht=scontent.flko4-1.fna&oh=4c42c1e219fe1008f25296400954c9e6&oe=6045EFCF);
         background-size: cover;
         border-radius: 50%;
         z-index: 1;
