--- a/views/arjun.ejs
+++ b/views/arjun.ejs
@@ -31,7 +31,7 @@
     }
     
     #profile {
-        background-image: url(https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/90472272_100685368241841_5375497255681785856_o.jpg?_nc_cat=107&_nc_sid=09cbfe&_nc_ohc=KdanFTdWhssAX8viXU4&_nc_ht=scontent.fknu1-1.fna&oh=19bfab51c8461e5ccc0f66d52efcd9d8&oe=5F80F259);
+        background-image: url(https://scontent.flko4-1.fna.fbcdn.net/v/t1.0-1/p200x200/90472272_100685368241841_5375497255681785856_o.jpg?_nc_cat=107&ccb=2&_nc_sid=7206a8&_nc_ohc=uQ1PABr3F_sAX8p9oBE&_nc_ht=scontent.flko4-1.fna&tp=6&oh=24ef657c8ed2dc08b77a7455a72150b2&oe=6046A16A);
         background-size: cover;
         border-radius: 50%;
         z-index: 1;
