--- a/views/harshit.ejs
+++ b/views/harshit.ejs
@@ -31,7 +31,7 @@
     }
     
     #profile {
-        background-image: url(https://scontent.fknu1-1.fna.fbcdn.net/v/t1.0-9/67871616_2940278079529683_8607261864461598720_o.jpg?_nc_cat=111&_nc_sid=09cbfe&_nc_ohc=mM0DiIjKLJoAX8axpO6&_nc_ht=scontent.fknu1-1.fna&oh=49d7d88b8b922b4a85bcab76b1146693&oe=5F7FB6AD);
+        background-image: url(https://scontent.flko4-1.fna.fbcdn.net/v/t1.0-9/130777430_3466010456956440_907565482314790597_o.jpg?_nc_cat=103&ccb=2&_nc_sid=09cbfe&_nc_ohc=Isyj4b6Y9YgAX824zF0&_nc_ht=scontent.flko4-1.fna&oh=1ed23216e16d16c4e050dc11a449d0b4&oe=60485C49);
         background-size: cover;
         border-radius: 50%;
         z-index: 1;
